# suiban

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  FAQ.md  KNOWN_ISSUES.md  NOTICE  README.md  bootstrap.sh  config.example.toml  install.sh  pyproject.toml
.github/workflows/: ci.yml
docs/: api.md  architecture.md  benchmarks.md  gateways.md  hardware.md  memory.md  research.md  turboquant.md
src/suiban/: __init__.py  app.py  cli.py  config.py  effort.py  errors.py  kv.py  paths.py
src/suiban/agent/: __init__.py  events.py  loop.py  structured.py
src/suiban/bench/: __init__.py  kv.py  replay.py  sample_text.py
src/suiban/gateways/: __init__.py  telegram.py  whatsapp.py
src/suiban/installer/: __init__.py  assets.py  assets_sha256.json  backend.py  binaries.py  models.py
src/suiban/llama/: __init__.py  backend.py  binary.py  load_controller.py  manager.py  mock_server.py
src/suiban/mcp/: __init__.py  catalog.py  client.py  manager.py
src/suiban/memory/: __init__.py  compression.py  fidelity.py  ids.py  importers.py  injection.py  reflection.py  service.py  skill_import.py  skills.py  state_files.py  store.py  titling.py
src/suiban/modes/: __init__.py  registry.py  ultra.py
src/suiban/providers/: __init__.py  registry.py
src/suiban/research/: __init__.py  engine.py  jobs.py  router.py  wiring.py
src/suiban/routers/: __init__.py  chat.py  import_router.py  mcp_router.py  (+9 more)
tests/: conftest.py  test_agent_loop.py  test_app.py  test_auth.py  test_bench_kv.py  test_budget.py  test_chat.py  test_config.py  test_context_budget.py  test_contract.py  test_effort.py  test_fidelity.py  test_fidelity_live.py  test_fuzz.py  test_hostile_env.py  test_import.py  test_installer.py  test_kv.py  test_llama.py  test_llama_chaos.py  test_load_controller.py  test_mcp.py  test_memory.py  test_modes.py  test_planner.py  test_projects.py  test_prompt_injection.py  test_providers.py  test_reflection.py  test_research.py  test_schedules.py  test_search.py  test_session_jail.py  test_skill_import.py  test_skills_verification.py  test_slap.py  test_telegram.py  test_telemetry.py  test_titling.py  test_tools.py  (+3 more)
tests/fixtures/: mcp_fixture_server.py
tests/perf/: bench_ttft.py  soak_live.sh
(+48 files in other folders)
